# Light-Minute

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
runtime/parakeet-helper-src/: Cargo.toml
runtime/parakeet-helper-src/src/: main.rs
scripts/: build-local-parakeet-helper.cmd  dev-local.mjs  local-parakeet-server.mjs
src/: App.tsx
src/app/: providers.tsx  queryClient.ts  router.tsx  routerMode.test.ts  routerMode.ts
src/components/layout/: AppShell.module.scss  AppShell.test.tsx  AppShell.tsx
src/components/recording/: RecordingControls.module.scss  RecordingControls.tsx
src/components/summary/: SummaryEditor.module.scss  SummaryEditor.tsx
src/components/transcript/: TranscriptList.module.scss  TranscriptList.test.tsx  TranscriptList.tsx
src/components/ui/: CuteButton.tsx  WindowBox.tsx
src/features/meetings/: api.test.ts  api.ts  hooks.ts
src/features/recording/: audioImportAnalysis.test.ts  audioImportAnalysis.ts  browserSpeechEngine.ts  engineTypes.ts  localWhisperRecordingEngine.ts  mockEngine.test.ts  mockEngine.ts  mockScript.ts  recordingEngine.test.ts  recordingEngine.ts  store.ts  transcriptSanitizer.test.ts  transcriptSanitizer.ts
src/features/settings/: store.test.ts  store.ts
src/features/summary/: api.test.ts  api.ts  draftStorage.test.ts  draftStorage.ts
src/lib/: browserStorage.test.ts  browserStorage.ts  format.ts  openaiCompatible.ts  storage.ts
src/styles/: globals.scss  variables.scss
src/test/: setup.ts  testUtils.tsx
src/types/: meeting.ts  settings.ts
(+14 files in other folders)
