[package]
name = "light-parakeet-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
hound = "3.5"
log = "0.4"
ndarray = "=0.16.1"
once_cell = "1.17.1"
ort = { version = "=2.0.0-rc.10" }
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
